--- a/www/ficha/index.html
+++ b/www/ficha/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Ficha de Personaje</title>
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/static/style.css">
-  <link rel="stylesheet" href="/ficha/style.css">
+  <link rel="stylesheet" href="/static/style.css" />
+  <link rel="stylesheet" href="/ficha/style.css" />
   <link rel="icon" href="/static/favicon.png" type="image/png" />
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
 <body>
   <div class="nav-bar">
-    <a class="nav-item active">FICHA</a>
+    <a class="nav-item active" id="ficha-link">FICHA</a>
     <a class="nav-item" id="conexiones-link">CONEXIONES</a>
     <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
   
@@ -22,10 +22,10 @@
       <a class="nav-item" href="/admin">ADMIN</a>
     </div>
   
-    <div class="nav-item dropdown">
+    <div class="nav-item dropdown" id="ia-dropdown-container" style="display:none;">
       IAs
       <div class="dropdown-content" id="ia-dropdown">
-        <!-- Links dinámicos -->
+        <!-- Links dinámicos a IAs -->
       </div>
     </div>
   </div>
@@ -41,18 +41,18 @@
         if (id) {
           document.getElementById("conexiones-link").setAttribute("href", `/conexiones`);
   
-          // Mostrar Admin si es rol admin
           if (rol === "admin") {
             document.getElementById("admin-link-container").style.display = "inline-block";
           }
   
-          // Ahora pedimos los usos reales
           const usosRes = await fetch("/usos");
           if (usosRes.ok) {
             const usos = await usosRes.json();
             const iaDropdown = document.getElementById("ia-dropdown");
+            const iaDropdownContainer = document.getElementById("ia-dropdown-container");
   
             const ias = ["hada", "eidolon", "fantasma", "anima"];
+            let tieneIAsDisponibles = false;
   
             ias.forEach(ia => {
               const cantidad = usos[ia];
@@ -61,88 +61,109 @@
                 link.href = `/${ia}`;
                 link.textContent = ia.charAt(0).toUpperCase() + ia.slice(1);
                 iaDropdown.appendChild(link);
+                tieneIAsDisponibles = true;
               }
             });
+  
+            if (tieneIAsDisponibles) {
+              iaDropdownContainer.style.display = "inline-block";
+            }
           }
         }
+  
+        // Dropdown toggle al hacer clic
+        const dropdown = document.getElementById("ia-dropdown-container");
+        const dropdownContent = document.getElementById("ia-dropdown");
+  
+        if (dropdown && dropdownContent) {
+          dropdown.addEventListener("click", (e) => {
+            e.stopPropagation();
+            dropdown.classList.toggle("active");
+          });
+  
+          document.addEventListener("click", (e) => {
+            if (!dropdown.contains(e.target)) {
+              dropdown.classList.remove("active");
+            }
+          });
+  
+          document.addEventListener("keydown", (e) => {
+            if (e.key === "Escape") {
+              dropdown.classList.remove("active");
+            }
+          });
+        }
+  
       } catch (error) {
         console.error("Error cargando sesión o usos:", error);
       }
     });
   </script>
   
-
-  <div class="ficha-terminal">
+  <div class="contenedor">
     <div class="scanline"></div>
-    <div class="ficha-header">
-      ▶ FICHA DE PERSONAJE // ID: <span class="char-id" id="char-id">Cargando...</span>
+    <div class="titulo-principal" data-id="nombre_personaje" contenteditable="false">NOMBRE DE PERSONAJE</div>
+    <div class="subtitulo" data-id="nombre_jugador" contenteditable="false">NOMBRE DEL JUGADOR</div>
+
+    <div class="separador"><span>Eidos</span></div>
+
+    <div class="bloque bloque-4">
+      <div class="item etiqueta">Cábala</div>
+      <div class="item etiqueta">Naturaleza</div>
+      <div class="item etiqueta">Senda</div>
+      <div class="item etiqueta">Arquetipo</div>
     </div>
-    <div class="ficha-body" id="ficha-contenido">
-      Cargando datos...
+    <div class="bloque bloque-4">
+      <div class="item no-editable" data-id="cabala" contenteditable="true"></div>
+      <div class="item no-editable" data-id="naturaleza" contenteditable="true"></div>
+      <div class="item no-editable" data-id="senda" contenteditable="true"></div>
+      <div class="item no-editable" data-id="arquetipo" contenteditable="true"></div>
+    </div>
+    <div class="bloque bloque-4">
+      <div class="item etiqueta">Arquetipo secundario</div>
+      <div class="item etiqueta">Arquetipo secundario</div>
+      <div class="item etiqueta">Arquetipo secundario</div>
+      <div class="item etiqueta">Arquetipo secundario</div>
+    </div>
+    <div class="bloque bloque-4">
+      <div class="item no-editable" data-id="sec_1" contenteditable="true"></div>
+      <div class="item no-editable" data-id="sec_2" contenteditable="true"></div>
+      <div class="item no-editable" data-id="sec_3" contenteditable="true"></div>
+      <div class="item no-editable" data-id="sec_4" contenteditable="true"></div>
+    </div>
+
+    <div class="subseccion">Daño</div>
+
+    <div class="bloque bloque-3 indicador-toggle" data-id="daño">
+      <div class="item" data-index="0"></div>
+      <div class="item" data-index="1"></div>
+      <div class="item" data-index="2"></div>
+    </div>
+
+    <div class="subseccion">Rotura</div>
+    <div class="bloque bloque-3 indicador-toggle" data-id="rotura">
+      <div class="item" data-index="0"></div>
+      <div class="item" data-index="1"></div>
+      <div class="item" data-index="2"></div>
+    </div>
+    <div class="separador"><span>Chimera</span></div>
+
+    <div class="subseccion">Mutación</div>
+    <div class="bloque bloque-3 indicador-toggle" data-id="mutacion">
+      <div class="item" data-index="0"></div>
+      <div class="item" data-index="1"></div>
+      <div class="item" data-index="2"></div>
+    </div>
+
+    <div class="subseccion">Cyber-infección</div>
+    <div class="bloque bloque-3 indicador-toggle" data-id="cyber">
+      <div class="item" data-index="0"></div>
+      <div class="item" data-index="1"></div>
+      <div class="item" data-index="2"></div>
     </div>
   </div>
 
-  <script>
-    window.addEventListener("DOMContentLoaded", async () => {
-      try {
-        // Obtenemos el usuario real desde la sesión del backend
-        const resInfo = await fetch("/session-info");
-        const sessionData = await resInfo.json();
-        const id = sessionData.usuario || "desconocido";
-
-        // Mostrar el ID real en pantalla
-        document.getElementById("char-id").textContent = id.toUpperCase();
-
-        // Cargar la ficha del personaje real
-        const resFicha = await fetch(`/ficha/personaje.json`);
-        const data = await resFicha.json();
-
-        const contenido = document.getElementById("ficha-contenido");
-        contenido.innerHTML = `
-      <div class="ficha-line"><span class="label">Nombre:</span> ${data.nombre}</div>
-      <div class="ficha-line"><span class="label">Estado:</span> ${data.estado}</div>
-      <div class="ficha-line"><span class="label">Afiliación:</span> ${data.afiliacion}</div>
-      <div class="ficha-line"><span class="label">Relaciones:</span> ${data.relaciones.join(', ')}</div>
-      <div class="ficha-line"><span class="label">Nivel de amenaza:</span> ${data.nivel_amenaza}</div>
-      <div class="ficha-log-title">⧉ LOG DE EVENTOS RECIENTES:</div>
-      <ul class="ficha-log">
-        ${data.log.map(l => `<li>${l}</li>`).join('')}
-      </ul>
-    `;
-      } catch (e) {
-        document.getElementById("ficha-contenido").textContent = "Error al cargar los datos.";
-        console.error("Error al cargar la ficha:", e);
-      }
-    });
-
-    // Dropdown funcionalidad
-    document.addEventListener("DOMContentLoaded", () => {
-      const dropdown = document.querySelector(".dropdown");
-      const dropdownContent = document.querySelector(".dropdown-content");
-
-      if (dropdown && dropdownContent) {
-        dropdown.addEventListener("click", (e) => {
-          e.stopPropagation();
-          dropdown.classList.toggle("active");
-          dropdownContent.classList.toggle("show");
-        });
-
-        document.addEventListener("click", (e) => {
-          if (!dropdown.contains(e.target)) {
-            dropdown.classList.remove("active");
-            dropdownContent.classList.remove("show");
-          }
-        });
-
-        document.addEventListener("keydown", (e) => {
-          if (e.key === "Escape") {
-            dropdown.classList.remove("active");
-            dropdownContent.classList.remove("show");
-          }
-        });
-      }
-    })
-  </script>
+  <script src="/ficha/script.js"></script>
 </body>
 
 </html>
