Agregar interfaz de administraciÃ³n para limpiar cachÃ© y ver estado del sistema

--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -113,6 +113,15 @@
       <div id="lista-personajes" style="display: none;"></div>
     </section>
 
+    <section class="admin-section">
+      <h2>Gestión del Sistema</h2>
+      <div style="display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 10px;">
+        <button id="limpiar-cache" style="background: #ff6b35; color: white;">🧹 Limpiar Caché</button>
+        <button id="ver-estado-sistema" style="background: #4ecdc4; color: white;">📊 Estado del Sistema</button>
+      </div>
+      <div id="estado-sistema" style="display: none; background: #1a1a1a; padding: 15px; border-radius: 5px; margin-top: 10px;"></div>
+    </section>
+
   </div>
 
   <!-- Modal para Crear/Editar Personaje -->
